fix(scrollbar): adding dark mode var

--- a/packages/core/src/global/scrollbar-vars.scss
+++ b/packages/core/src/global/scrollbar-vars.scss
@@ -8,4 +8,5 @@
 .tds-mode-dark {
   --tds-scrollbar-track-color: var(--tds-grey-868);
   --tds-scrollbar-thumb-color: var(--tds-grey-700);
+  --tds-scrollbar-hover-thumb-color: var(--tds-grey-600);
 }
